[project]
name = "scanpng"
version = "0.1.0"
description = "Analyseur de fichiers PNG (chunks, CRC recalculé, offsets, append data)"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "DjCode" }
]
license = { text = "MIT" }
dependencies = [
    "colorama"
]

[project.scripts]
scanpng = "scanpng.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"